Create global .env file and connect most of the docker compose values with it

--- a/.env
+++ b/.env
@@ -1,10 +1,17 @@
-# Mysql Parameters
-MYSQL_PORT_3306_TCP_ADDR=snipeit_mysql
-MYSQL_PORT_3306_TCP_PORT=3306
+# Timezone
+TIMEZONE='Asia/Dhaka'
 
-MYSQL_DATABASE=snipeit
+# Database
+MYSQL_HOST=snipeit_mysql
+MYSQL_PORT=3306
 MYSQL_USER=root
 MYSQL_PASSWORD=foobar
+MYSQL_ROOT_PASSWORD=foobar
+MYSQL_DATABASE=snipeit
+
+# Mysql Parameters
+MYSQL_PORT_3306_TCP_ADDR=${MYSQL_HOST}
+MYSQL_PORT_3306_TCP_PORT=${MYSQL_PORT}
 
 # Email Parameters
 # - the hostname/IP address of your mailserver
@@ -13,7 +20,7 @@ MAIL_PORT_587_TCP_ADDR=smtp.whatever.com
 MAIL_PORT_587_TCP_PORT=587
 # the default from address, and from name for emails
 MAIL_ENV_FROM_ADDR=youremail@yourdomain.com
-MAIL_ENV_FROM_NAME=Your Full Email Name
+MAIL_ENV_FROM_NAME='Your Full Email Name'
 # - pick 'tls' for SMTP-over-SSL, 'tcp' for unencrypted
 MAIL_ENV_ENCRYPTION=tcp
 # SMTP username and password
@@ -25,7 +32,7 @@ APP_ENV=production
 APP_DEBUG=false
 APP_KEY=base64:D5oGA+zhFSVA3VwuoZoQ21RAcwBtJv/RGiqOcZ7BUvI=
 APP_URL=http://127.0.0.1
-APP_TIMEZONE=US/Pacific
+APP_TIMEZONE=${TIMEZONE}
 APP_LOCALE=en
 
 # Docker-specific variables
