--- a/.env
+++ b/.env
@@ -1,6 +1,10 @@
 # Timezone
 TIMEZONE='Asia/Dhaka'
 
+# Snipe-It
+SNIPE_IT_EXTERNAL_PORT=80
+SNIPE_IT_INTERNAL_PORT=80
+
 # Database
 MYSQL_HOST=snipeit_mysql
 MYSQL_PORT=3306
